--- a/besplatnyy-vpn-dlya-windows-10-kogda-hochetsya-oboyti-blokirovki-bez-lishnih-zatrat.html
+++ b/besplatnyy-vpn-dlya-windows-10-kogda-hochetsya-oboyti-blokirovki-bez-lishnih-zatrat.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5">
-
+    <meta name="yandex-verification" content="e8fbec4e65485980" />
+    <meta name="google-site-verification" content="zIIeLaq4ImhZ6aexG418aRN4Uawx7YsmMr7QcX2_UBQ" />
     <meta name="description" content="Скачайте лучшие VPN для Android с высокой скоростью и надежной защитой данных в 2025 году.">
     <meta name="keywords" content="">
     <title>Лучшие VPN для Android — стабильность и безопасность в 2025</title>
@@ -916,6 +917,18 @@
       </div>
       </footer>
       <script src="./js/main.js"></script>
+      <!-- Yandex.Metrika counter -->
+      <script type="text/javascript">
+          (function(m,e,t,r,i,k,a){
+              m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
+              m[i].l=1*new Date();
+              for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+              k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)
+          })(window, document,'script','https://mc.yandex.ru/metrika/tag.js?id=103967368', 'ym');
 
+          ym(103967368, 'init', {ssr:true, webvisor:true, clickmap:true, ecommerce:"dataLayer", accurateTrackBounce:true, trackLinks:true});
+      </script>
+      <noscript><div><img src="https://mc.yandex.ru/watch/103967368" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+      <!-- /Yandex.Metrika counter -->
       </body>
       </html>
